--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,86 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+
+li {
+  list-style-type: none;
+}
+
+
+.gallery {
+  width: 1440px;
+  height: 696px;
+  padding: 24px 156px 24px 156px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 24px;
+  background: #FFFFFF;
+}
+
+.gallery-item {
+  cursor: pointer;
+}
+
+.gallery-link {}
+
+.gallery-image {
+  width: 360px;
+  height: 200px;
+}
+
+
+
+.feedback-form {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.email {
+  display: flex;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+}
+
+.email:hover {
+  border: 1px solid #000000
+}
+
+.message {
+  display: flex;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 80px;
+
+}
+
+.message:hover {
+  border: 1px solid #000000
+}
+
+.btn {
+  /* display: flex; */
+  font-family: "Montserrat", sans-serif;
+  width: 95px;
+  height: 40px;
+  padding: 8px 16px 8px 16px;
+  gap: 10px;
+  border-radius: 8px;
+  opacity: 0px;
+  background-color: #4E75FF;
+  color: white;
+  border: none;
+  margin-top: 16px;
+}
+
+.btn:hover {
+  background-color: #6C8CFF
+}
